--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -5,8 +5,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="/assets/css/main.css">
+
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#41a9c7">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!--[if lt IE 9]>
       <script src="assets/js/polyfill/html5-shiv.js"></script>
@@ -14,9 +20,7 @@
   </head>
   <body>
 
-  {{> navigation }}
   {{{contents}}}
-  {{> footer }}
 
     <!--[if lt IE 9]>
       <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
